Fixed CSS, capitalization of folders

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
- <link rel="stylesheet" href="css/normalize.css">
- <link rel="stylesheet" href="css/style.css">
- <link rel="stylesheet" href="css/font-awesome.css">
- <link rel="stylesheet" href="animate.min.css">
+ <link rel="stylesheet" href="CSS/normalize.css">
+ <link rel="stylesheet" href="CSS/style.css">
+ <link rel="stylesheet" href="CSS/font-awesome.css">
+ <link rel="stylesheet" href="CSS/animate.min.css">
 
 </head>
 <body>
@@ -25,7 +25,7 @@
 <header>
   <nav class="container">
     <div class="one-half">
-    <a href="index.html" class="site-logo"><img src="images/site-logo.png" alt="Blocbox" /></a>
+    <a href="index.html" class="site-logo"><img src="Images/site-logo.png" alt="Blocbox" /></a>
     </div>
     <div class="one-half">
     <ul>
@@ -38,7 +38,7 @@
      <h1 class="animated fadeIn">Save |Share |Collaborate.</h1>
      <p>Blocbox is the perfect place to store your images, links and notes all in one place.<br/><em>Stop wasting time looking for your sticky notes and bookmarks and start using Blocbox today!</em></p>
      <a href="signup.html" class="btn">Start Your Free Trial!</a>
-     <img src="images/dashboard.png" alt="Blocbox" />
+     <img src="Images/dashboard.png" alt="Blocbox" />
    </div>
 
 </header>
@@ -178,7 +178,7 @@
          </ul>
        </nav>
        <div class="right-footer-block one-third">
-         <img class="logo" src="images/site-logo.png" alt="Blocbox" />
+         <img class="logo" src="Images/site-logo.png" alt="Blocbox" />
        </div>
    </div>
 </footer>
