--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
  </section>
  <!-- Testimonials -->
 
- <section class="Testimonials">
+ <section class="testimonials">
   <div class="container">
      <h2>Who uses blocbox?</h2>
      <p>Blocbox has more than 100,000 satisfied users storing and collaborating<br/> with teams across the world. Here's what a few have to say:</p>
@@ -130,7 +130,7 @@
        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
        <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
      </li>  
-      <li class="one-fourth-other">
+      <li class="one-fourth other">
     <blockquote>"Blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
     </blockquote>
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
@@ -142,7 +142,7 @@
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
     <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
   </li>
-  <li class="one-fourth-other">
+  <li class="one-fourth other">
     <blockquote>"Blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
     </blockquote>
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
