--- a/dashboard.html
+++ b/dashboard.html
@@ -15,11 +15,12 @@
  <link rel="stylesheet" href="CSS/normalize.css">
  <link rel="stylesheet" href="CSS/style.css">
  <link rel="stylesheet" href="CSS/font-awesome.css">
- <link rel="stylesheet" href="CSS/animate.min.css">
- <link rel="stylesheet" href="CSS/dashboard.html">
+ <link rel="stylesheet" href="CSS/dropit.css">
 
 </head>
 <body class="dashboard">
+<!-- RESPONSIVE NAV -->
+   <a class="hamburger" id="menu" href="#">&#9776;</a>
  <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
      <a href="#" class="site-logo"><img src="images/site-logo.png" /></a>
@@ -50,7 +51,17 @@
      <div class="container">
        <div class="header">
          <h1>All Items</h1>
-         <a href="#" class="btn">+ Add</a>
+       
+          <ul class="menu">
+            <li>
+              <a href="#" class="btn">+ Add</a>
+              <ul>
+                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+              </ul>
+            </li>
+          </ul>
        </div>
      </div>
      <div class="container">
@@ -62,14 +73,14 @@
        <div class="content-item">
          <div class="item-box">
          <h2><img class="favicon" src="https://www.airbnb.com/favicon.ico"> <a href="#">airbnb.com</a></h2>
-+         <p>Vacation Rentals, Homes, Apartments &amp; Rooms for Rent &mdash; Airbnb</p>
+       <p>Vacation Rentals, Homes, Apartments &amp; Rooms for Rent &mdash; Airbnb</p>
          </div>
        </div>
        <div class="content-item">
          <div class="item-box">
           <h2><a href="#">Need to find a designer</a></h2>
-+          <p>We have a one-person design team, but are ready to expand. We need to look for a second designer right now so we can continue to grow.</p>
-+          <p>Put your recommendations here so we can view all of them. ...</p>
+        <p>We have a one-person design team, but are ready to expand. We need to look for a second designer right now so we can continue to grow.</p>
+         <p>Put your recommendations here so we can view all of them. ...</p>
          </div>
        </div>
        <div class="content-item">
@@ -80,7 +91,7 @@
        <div class="content-item">
          <div class="item-box">
           <h2><img class="favicon" src="https://www.yourkarma.com/favicon.ico"> <a href="#">yourkarma.com</a></h2>
-+          <p>Karma Go lets you take WiFi everywhere. Pay-as-you-go for data that never expires. No contracts or monthly fees. With nationwide coverage on LTE, stay connected to the internet with all of your devices, seamlessly.</p>
+         <p>Karma Go lets you take WiFi everywhere. Pay-as-you-go for data that never expires. No contracts or monthly fees. With nationwide coverage on LTE, stay connected to the internet with all of your devices, seamlessly.</p>
          </div>
        </div>
        <div class="content-item">
@@ -92,13 +103,13 @@
        <div class="content-item">
          <div class="item-box">
           <h2><a href="#">Testing</a></h2>
-+          <p>I love lamp.</p>
+         <p>I love lamp.</p>
          </div>
        </div>
        <div class="content-item">
          <div class="item-box">
          <h2><img class="favicon" src="https://www.invisionapp.com/favicon.ico"> <a href="#">invisionapp.com</a></h2>
-+          <p>Free Web &amp; Mobile (iOS, Android) Prototyping and UI Mockup Tool | InVision</p>
+         <p>Free Web &amp; Mobile (iOS, Android) Prototyping and UI Mockup Tool | InVision</p>
          </div>
        </div>
        <div class="content-item">
@@ -109,12 +120,20 @@
        <div class="content-item">
          <div class="item-box">
          <h2><a href="#">Why storing inspiration is great</a></h2>
-+          <p>blocbox is a new tool to help collect and store your inspiration and information. From images, to links, to notes like this one, you can keep track of all your favorite things.</p>
+          <p>blocbox is a new tool to help collect and store your inspiration and information. From images, to links, to notes like this one, you can keep track of all your favorite things.</p>
          </div>
        </div>
      </div> 
    </section>
  </main>
+   <script src="js/jquery-2.1.3.min.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".menu").dropit();
+     $( "#menu" ).click(function() {
+         $("#left-nav").toggleClass("open", 200);
+     });
+   </script>
 
 </body>
 </html>
